--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
@@ -47,7 +47,7 @@
     </p>
     <p>
       <strong>Fecha de finalización de contrato:</strong>
-      {{ (novedad.contrato?.fechaTerminacionFase2 ? novedad.contrato?.fechaTerminacionFase2 : novedad.contrato?.fechaTerminacion) | date:'dd/MM/yyyy'}}
+      {{ (novedad.contrato?.fechaEstimadaFinalizacion ? novedad.contrato?.fechaEstimadaFinalizacion : novedad.contrato?.fechaTerminacionFase2 ? novedad.contrato?.fechaTerminacionFase2 : novedad.contrato?.fechaTerminacion) | date:'dd/MM/yyyy'}}
     </p>
 
     <div *ngIf="novedad.esAplicadaAcontrato !== true">
@@ -185,7 +185,7 @@
           {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
         </p>
 
-        <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
+        <p *ngIf="((descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2') && !((novedad?.estadoCodigo == '26' && novedad?.vaComite) || (novedad?.estadoCodigo == '25' && !novedad?.vaComite)))">
           <strong>
             Fecha estimada de terminación del contrato:
           </strong>
