--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuaciones-no-tai/control-y-tabla-actuaciones-no-tai.component.html
@@ -39,27 +39,26 @@
             <ng-container matColumnDef="estadoActuacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la actuación </th>
                 <td mat-cell *matCellDef="let element" align="center">
-                    <div *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'">En
-                        proceso de registro</div>
-                    <div *ngIf="element.estadoActuacionCodigo=='2'">Finalizada</div>
-                    <div *ngIf="element.estadoActuacionCodigo=='3'">Enviada a Comité Técnico</div>
+                  <div *ngIf="element.estadoActuacionCodigo=='sin definir'">En
+                      proceso de registro</div>
+                  <div *ngIf="element.estadoActuacionCodigo!='sin definir'">{{ element?.estadoActuacion }}</div>
                 </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 16%;"> Gestión </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo' 
-                        && element.requiereComite==false"
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="((element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo'
+                        && element.requiereComite==false)|| ((element.estadoActuacionCodigo == '5') && element.registroCompletoActuacion=='Completo' && element.requiereComite==true)"
                         (click)="this.finalizarAct(element.actuacionId,element.requiereComite)">
                         Finalizar actuación
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo' 
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="(element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir')&&element.registroCompletoActuacion=='Completo'
                     && element.requiereComite==true"
                         (click)="this.finalizarAct(element.actuacionId,element.requiereComite)">
                         Enviar a comité técnico
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir'"
+                        *ngIf="element.estadoActuacionCodigo=='1' || element.estadoActuacionCodigo=='sin definir' || element.estadoActuacionCodigo == '6' || element.estadoActuacionCodigo == '7' || element.estadoActuacionCodigo == '8' || element.estadoActuacionCodigo == '9'"
                         (click)="this.verDetalleEditarActuacion(element.actuacionId)">
                         Ver detalle/Editar
                     </button>
@@ -69,7 +68,7 @@
                         Eliminar
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActuacionCodigo=='2' || element.estadoActuacionCodigo=='3'"
+                        *ngIf="(element.estadoActuacionCodigo != '1' && element.estadoActuacionCodigo != '6' && element.estadoActuacionCodigo != '7'&& element.estadoActuacionCodigo != '8' && element.estadoActuacionCodigo != '9')"
                         (click)="this.verDetalleActuacion(element.actuacionId)">
                         Ver detalle
                     </button>
