--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -352,6 +352,7 @@
                   (click)="pickerPlazoInicio.open()"
                   placeholder="DD/MM/AAAA"
                   required
+                  [max]="fechaFinSuspensionVal"
                 />
                 <mat-datepicker #pickerPlazoInicio></mat-datepicker>
               </mat-form-field>
