--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
@@ -14,6 +14,7 @@
                                             [fechaSolicitudNovedad]="fechaSolicitudNovedad"
                                             [estaEditando]="estaEditando"
                                             [fechaSolicitudNovedad]="fechaSolicitudNovedad"
+                                            [fechaFinSuspensionVal]="fechaFinSuspensionVal"
                                             [contrato]="contrato"
                                             (guardar)="guardarRegistro()"
                                             >
