--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
@@ -123,7 +123,7 @@
               </ng-container>
 
               <ng-container matColumnDef="saldo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Saldo</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Saldo presupuestal</th>
                 <td mat-cell *matCellDef="let element" style="padding: 0 !important">
                   <div class="sub-item-table justify-content-center align-items-center" *ngFor="let el of element.listDyProyectos; let i = index">
                     <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
