--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
@@ -6692,7 +6692,14 @@
 <div class="parent mt-2em" id="example-pdf">
 
   <table width="100%"
-    style="max-width:1835px; border-collapse: collapse; table-layout: fixed; width: 1373pt; margin-left: auto; margin-right: auto; border-left: 1px solid; border-top: 1px solid;border-bottom: 1px solid;">
+    style="border-collapse: collapse;
+    table-layout: auto;
+    width: 135%;
+    margin-left: auto;
+    margin-right: auto;
+    border-left: 1px solid;
+    border-top: 1px solid;
+    border-bottom: 1px solid;">
     <tr class="xl82" style=" height: 36.6pt">
       <td class="xl82" style="height: 36.6pt"></td>
       <td colspan="4" rowspan="3" height="111" width="325"
