--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
@@ -204,7 +204,7 @@
                         </p>
                         <p>
                             <strong>Valor total del proyecto para el componente:</strong>
-                            {{proyecto.valorAportante| currency:'':'symbol':'3.0'}}
+                            {{proyecto?.valorProyectoxComponente | currency:'':'symbol':'3.0'}}
                         </p>
 
                         <h2 class="card-subTitle">Aportantes</h2>
