--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
@@ -86,7 +86,7 @@
               <ng-container matColumnDef="ProyectoLLaveMen">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre proyecto</th>
                 <td mat-cell *matCellDef="let element">
-                  <div  class="sub-item-table justify-content-center align-items-center"
+                  <div  class="sub-item-table justify-content-center align-items-center text-center"
                         *ngFor="let el of element.listDyProyectos; let i = index"
                         [class.h-3]="el.listDyUsos.length === 1"
                         [class.h-6]="el.listDyUsos.length === 2"
