--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/verdetalle-validfsp/verdetalle-validfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/verdetalle-validfsp/verdetalle-validfsp.component.html
@@ -62,7 +62,7 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre proyecto</th>
                         <td mat-cell *matCellDef="let element" style="padding: 0 !important">
                           <div
-                            class="sub-item-table justify-content-center align-items-center"
+                            class="sub-item-table justify-content-center align-items-center text-center"
                             *ngFor="let el of element.listDyProyectos; let i = index"
                             [class.h-3]="el.listDyUsos.length === 1"
                             [class.h-6]="el.listDyUsos.length === 2"
