--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -1,11 +1,8 @@
-<div class="d-flex justify-content-center" *ngIf="montoMaximoPendiente !== undefined">
+<!--<div class="d-flex justify-content-center" *ngIf="montoMaximoPendiente !== undefined">
   <div>
     <p> <b> Monto pendiente por facturar: </b> {{ montoMaximoPendiente.montoMaximo | currency:'':'symbol-narrow':'.0-0' }} </p>
   </div>
-  <!-- <div>
-    <p> <b> Monto pendiente por facturar en la fase: </b> {{ montoMaximoPendiente.valorPendientePorPagar | currency: '': 'symbol-narrow':'.0-0' }} </p>
-  </div> -->
-</div>
+</div>-->
 
 <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
   <div class="d-flex justify-content-center" *ngIf="criteriosSeleccionadosArray.length > 0">
@@ -25,6 +22,7 @@
                     <p><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
                     <div *ngFor="let concepto of getConceptos( j ).controls">
                         <p><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
+                        <p><b>Monto pendiente por facturar: </b> {{ concepto.get( 'montoMaximo' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
                         <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                     </div>
                     <p><strong>Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
@@ -74,7 +72,7 @@
         </div>
       </div>
     </div>
-  
+
     <div *ngIf="criterios.length > 0" class="animatedDown">
       <div formArrayName="criterios" style="margin-top: 3em;" *ngFor="let criterio of criterios.controls; index as i">
         <mat-card class="shipping-card" [formGroup]="criterio">
@@ -86,7 +84,7 @@
               <div class="col-md-12">
                 <div class="row">
                   <div class="pr-1">
-                    <label class="label-left" for="tipoPago"               
+                    <label class="label-left" for="tipoPago"
                     [ngClass]="{
                       'color-secondaryColor':
                         (criterio.get('tipoPago').invalid && criterio.get('tipoPago').touched) ||
@@ -133,7 +131,7 @@
                   <div class="col">
                     <mat-form-field class="select-width">
                       <mat-select formControlName="conceptoPago" multiple
-                        (selectionChange)="getvaluesConcepto( $event.value, i )">
+                        (selectionChange)="getvaluesConcepto( $event.value, i, criterio.get('tipoCriterioCodigo')?.value )">
                         <mat-option *ngFor="let concepto of criterio.get( 'conceptosDePago' ).value" [value]="concepto">
                           {{ concepto.nombre }}
                         </mat-option>
@@ -173,10 +171,11 @@
                       }">
                         Valor facturado al concepto
                       </label>
+                      <p><b>Monto pendiente por facturar: </b> {{ concepto.get( 'montoMaximo' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
                     </div>
                     <div class="col d-flex">
                         <mat-form-field class="full-width">
-                            <input  matInput 
+                            <input  matInput
                                     #valorFacturadoConcepto
                                     currencyMask
                                     maxlength="20"
@@ -269,7 +268,7 @@
         </div>
       </div>
     </div>
-  
+
       <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngIf="observacion !== undefined">
           <mat-card-header class="header-card header-card--margin">
               <mat-card-title class="header-card--text textoGris">
@@ -283,7 +282,7 @@
               <section [innerHTML]="observacion.observacion" *ngIf="observacion.tieneObservacion === true"></section>
           </mat-card-content>
       </mat-card>
-  
+
     <div class="text-center mb-2em">
       <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="criterios.dirty === false">
         <img src="assets/img/icon/guardar.svg">
