--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
@@ -136,7 +136,7 @@
               </td>
             </ng-container>
             <ng-container matColumnDef="saldo">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Saldo</th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Saldo presupuestal</th>
               <td mat-cell *matCellDef="let element" style="padding: 0 !important">
                 <div
                   class="sub-item-table justify-content-center align-items-center"
