--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
@@ -1,11 +1,8 @@
-<div class="d-flex justify-content-center" *ngIf="montoMaximoPendiente !== undefined">
+<!--<div class="d-flex justify-content-center" *ngIf="montoMaximoPendiente !== undefined">
     <div>
       <p> <b> Monto pendiente por facturar: </b> {{ montoMaximoPendiente.montoMaximo | currency: '': 'symbol-narrow':'.0-0' }} </p>
     </div>
-    <!-- <div>
-      <p> <b> Monto pendiente por facturar en la fase: </b> {{ montoMaximoPendiente.valorPendientePorPagar | currency: '': 'symbol-narrow':'.0-0' }} </p>
-    </div> -->
-</div>
+</div>-->
 
 <div class="d-flex justify-content-center" *ngIf="criteriosSeleccionadosArray.length > 0">
     <strong>Criterios de pago:</strong>
